[project]
name = "myagent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.18",
    "fastapi>=0.136.3",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.1",
    "langchain-deepseek>=1.0.1",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.26",
    "numpy>=2.4.6",
    "openai>=2.37.0",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=2.2.0",
    "ultralytics>=8.4.53",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
